--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -1,6 +1,6 @@
 header {
     height: 50px;
-    background: @color_header;
+    background: @color_dark;
     overflow: hidden;
     min-width: 780px;
 
