--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -5,7 +5,7 @@ header {
     min-width: 780px;
 
     .wrapper {
-        .content-wrapper;
+        .content-wrapper();
         padding: 0 15px;
     }
 
