--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -7,5 +7,5 @@
 @import './main.less';
 @import './component-home.less';
 @import './component-send.less';
-@import './main.less';
+@import './message.less';
 @import './footer.less';
