--- a/src/styles/colors.less
+++ b/src/styles/colors.less
@@ -1,5 +1,5 @@
 @color_white: #ffffff;
-@tio_wanna_white: #f1f1f1;
+@color_wanna_white: #f1f1f1;
 @color_content: #f6f7f8;
 @color_dark: #212121;
 @color_green: #4cc148;
