--- a/src/styles/component-home.less
+++ b/src/styles/component-home.less
@@ -1,9 +1,25 @@
 .component-home {
     padding: 15px;
+    width: 50%;
+    min-width: 750px;
+    margin: 0 auto;
+
+    fieldset {
+        display: block;
+        border: 0px;
+        position: relative;
+        background: @color_white;
+        padding: 15px;
+        margin: 0;
+        margin-top: 15px;
+        min-height: 96px;
+        border-radius: 2px;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+    }
+    
     div {
         text-align: center;
         padding-top: 15px;
-        
     }
     p {
         padding-bottom: 10px;
