--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -10,3 +10,13 @@
     -webkit-box-shadow: none !important;
     box-shadow: none !important;
 }
+
+.content-wrapper() {
+    width: 1170px;
+    margin: 0 auto;
+    @media (max-width: 1200px) {
+        width: 100%;
+        max-width: 1200px;
+        min-width: 780px;
+    }
+}
