sig and push tx, ignore last empty account

--- a/src/styles/component-send.less
+++ b/src/styles/component-send.less
@@ -207,7 +207,7 @@
         &.disabled {
             .show-advanced-settings,
             .advanced-settings, 
-            button {
+            .claim-button {
                 display: none;
             }
 
