--- a/src/styles/message.less
+++ b/src/styles/message.less
@@ -10,7 +10,7 @@ article {
         font-weight: 500;
         line-height: 1.1;
         padding-bottom: 5px;
-        color: @color_red;
+        color: @color_green;
     }
 
     button {
@@ -36,6 +36,9 @@ article {
         border-color: @color_red;
         background: transparent;
         a { 
+            color: @color_red;
+        }
+        h4 {
             color: @color_red;
         }
     }
