empty bch accounts discovery

--- a/src/styles/component-home.less
+++ b/src/styles/component-home.less
@@ -24,4 +24,9 @@
     p {
         padding-bottom: 10px;
     }
+
+    button:disabled,
+    button[disabled] {
+        background-color: @color_red;
+    }
 }
