--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -89,3 +89,19 @@ input {
     border: 1px solid @color_border_grey;
     font-family: @font-family-monospace;
 }
+
+::-webkit-input-placeholder {
+    color: @color_border_grey;
+}
+input::-moz-placeholder {
+    color: @color_border_grey;
+}
+:-moz-placeholder {
+    color: @color_border_grey;
+}
+::-ms-input-placeholder {
+    color: @color_border_grey;
+}
+:-ms-input-placeholder {
+    color: @color_border_grey;
+}
