add info about the tool
(just hotfix, so it is ugly :-/)

--- a/src/styles/message.less
+++ b/src/styles/message.less
@@ -42,4 +42,15 @@ article {
             color: @color_red;
         }
     }
+
+    &.info {
+        border-color: @color_orange;
+        background: transparent;
+        a {
+            color: @color_orange;
+        }
+        h4 {
+            color: @color_orange;
+        }
+    }
 }
