--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -37,13 +37,14 @@ body {
 
 a {
     text-decoration: none;
+    cursor: pointer;
 }
 
 a:focus {
     .no-outlines();
 }
 
-button:focus, input:focus {
+button:focus, input:focus, textarea:focus {
     outline: 0;
 }
 
