--- a/src/styles/message.less
+++ b/src/styles/message.less
@@ -53,4 +53,24 @@ article {
             color: @color_orange;
         }
     }
+
+    &.log {
+        border-color: @color_red;
+        background: transparent;
+        h4 {
+            color: @color_red;
+        }
+
+        textarea {
+            width: 100%;
+            min-width: 100%;
+            max-width: 100%;
+            height: 200px;
+            min-height: 200px;
+            max-height: 200px;
+            border: 1px solid @color_border_grey;
+            font-family: @font-family-monospace;
+            font-size: 11px;
+        }
+    }
 }
