new connect with third discovery

--- a/src/styles/component-send.less
+++ b/src/styles/component-send.less
@@ -92,6 +92,19 @@
             width: 550px;
         }
 
+        .address-dropdown {
+            position: absolute;
+            left: 0;
+            top: 24px;
+            border: 1px solid red;
+            background: @color_white;
+            width: 100%;
+
+            div {
+                padding: 5px 10px;
+            }
+        }
+
         span {
             margin-left: 15px;
             font-size: 12px;
