--- a/src/styles/component-home.less
+++ b/src/styles/component-home.less
@@ -9,7 +9,7 @@
         border: 0px;
         position: relative;
         background: @color_white;
-        padding: 15px;
+        padding: 15px 40px;
         margin: 0;
         margin-top: 15px;
         min-height: 96px;
@@ -17,17 +17,24 @@
         box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
     }
     
-    div {
+    .button-wrapper {
         text-align: center;
-        padding-top: 15px;
+        padding-top: 5px;
     }
     p {
         padding-bottom: 10px;
     }
 
+    .warning {
+        color: @color_orange;
+        padding-bottom: 15px;
+        text-align: left;
+        font-size: 16px;
+    }
+
     button:disabled,
     button[disabled] {
-        background-color: @color_red;
+        background-color: @color_light_grey;
     }
 
     button.hidden {
