--- a/src/styles/component-send.less
+++ b/src/styles/component-send.less
@@ -94,14 +94,24 @@
 
         .address-dropdown {
             position: absolute;
+            z-index: 2;
             left: 0;
             top: 24px;
-            border: 1px solid red;
+            border: 1px solid @color_border_grey;
+            border-top: 0px;
             background: @color_white;
+            box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.25);
             width: 100%;
+            max-height: 200px;
+            overflow-y: auto;
 
             div {
+                cursor: pointer;
                 padding: 5px 10px;
+                &:hover {
+                    color: @color_green;
+				    background: @color_content;
+                }
             }
         }
 
