--- a/src/styles/fonts.less
+++ b/src/styles/fonts.less
@@ -22,8 +22,6 @@
     url('../fonts/glyphicons.svg#icomoon') format('svg');
 }
 
-
-
 .glyphicon-base() {
     display: inline-block;
     font-family: 'glyphiconsfont';
@@ -67,4 +65,9 @@
 .glyphicon-down {
     .glyphicon-base();
     content: "\ea43";
+}
+
+.glyphicon-eye-open {
+    .glyphicon-base();
+    content: "\e105";
 }
