--- a/src/styles/component-send.less
+++ b/src/styles/component-send.less
@@ -51,6 +51,7 @@
         box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
 
         p {
+            position: relative;
             padding-bottom: 25px;
             &:first-child {
                 padding-bottom: 4px;
@@ -94,7 +95,7 @@
 
         .address-dropdown {
             position: absolute;
-            z-index: 2;
+            z-index: 100;
             left: 0;
             top: 24px;
             border: 1px solid @color_border_grey;
@@ -108,9 +109,50 @@
             div {
                 cursor: pointer;
                 padding: 5px 10px;
+                text-transform: capitalize;
                 &:hover {
                     color: @color_green;
-				    background: @color_content;
+                    background: @color_content;
+                }
+            }
+        }
+
+        // eye button
+        .verify-address-button {
+            display: block;
+            position: absolute;
+            font-size: 12px;
+            color: @color_hint_grey;
+            top: 11px;
+            right: -5px;
+            z-index: 2;
+            cursor: pointer;
+            transition: color 0.4s;
+            &:before {
+                .glyphicon-eye-open;
+                width: 20px;
+                height: 15px;
+            }
+
+            .verify-address-tooltip {
+                position: absolute;
+                display: none;
+                z-index: 1;
+                left: -40px;
+                top: 20px;
+                width: 100px;
+                background-color: rgba(0, 0, 0, 0.7);
+                font-size: 1em;
+                color: @color_white;
+                border-radius: 6px;
+                padding: 10px;
+                text-align: center;
+            }
+
+            &:hover {
+                color: @color_green;
+                .verify-address-tooltip {
+                    display: block;
                 }
             }
         }
@@ -157,6 +199,7 @@
                 margin-left: 17%;
                 margin-top: 1px;
                 padding-bottom: 10px;
+                text-transform: capitalize;
             }
             
             &.amount-hint {
@@ -246,6 +289,10 @@
                 }
             }
 
+            .verify-address-button {
+                display: none;
+            }
+
             &.empty {
                 .address-input {
                     &:after {
@@ -300,6 +347,9 @@
                 button {
                     display: block;
                 }
+            }
+            .verify-address-button {
+                display: none;
             }
             .address-hint {
                 //margin-top: 8px;
