--- a/src/styles/nlform.less
+++ b/src/styles/nlform.less
@@ -23,7 +23,7 @@
 	font-size: 18px;
 	line-height: 1.8;
 	span {
-		padding: 0px 10px;
+		padding: 0px 6px;
 		&:first-child {
 			padding-left: 0px;
 		}
@@ -73,7 +73,7 @@
 		display: block;
 		top: 0;
 		left: 0;
-		min-width: 250px;
+		min-width: 200px;
 		text-align: left;
 		list-style: none;
 		margin: 0;
@@ -88,7 +88,9 @@
 		li {
 			position: relative;
 			color: @color_dark;
+			white-space: nowrap;
 			padding: 4px 8px;
+			padding-right: 24px;
 			transition: all 0.3s;
 			&.selected {
 				color: @color_green;
