--- a/src/styles/message.less
+++ b/src/styles/message.less
@@ -30,6 +30,10 @@ article {
 
     a {
         color: @color_green;
+        text-decoration: underline;
+        &:hover {
+            text-decoration: none;
+        }
     }
 
     &.error {
