--- a/src/styles/component-send.less
+++ b/src/styles/component-send.less
@@ -205,6 +205,7 @@
             &.amount-hint {
                 position: relative;
                 display: none;
+                color: @color_orange;
                 &:before {
                     .glyphicon-info;
                     vertical-align: -2px;
